# djangotutorial

./: .coveragerc  README.md  db.sqlite3  pyproject.toml
apis/: api.py
benchmarks/: test_benchmark.py  test_benchmark2.py
coverages/: .coverage  test_something.py
coverages/dir_one/: coverage.json  test_branch.py
docs/: benchmark_test.md  coverage_test.md  debug_toolbar.md  dev_api.md  django_silk.md
mysite/: api.py  settings.py  urls.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/polls_utils/: some_code.py
polls/templates/polls/: index.html  results.html
polls/tests/: bench.json  common.py  test_bencmark.py  test_model.py  test_template.py  test_view.py
