[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["defnngj <defnngj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
selenium = "^4.27.1"
django-debug-toolbar = "^4.4.6"
django-silk = "^5.3.2"
pyperf = "^2.8.1"

pytest-benchmark = "^5.1.0"
coverage = "^7.6.10"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.doubanio.com/simple/"
